Updates server-dal & api documents
